# audio-metatag

./: README.md  pyproject.toml  tox.ini
src/: audio_metatag.py  audio_tag.py
tests/: test_audio_metatag.py  test_audio_tag.py
tests/sample_files/: Artist - Title.flac
